--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: GitHub
 email: cart-lamy.jimmy@live.fr
 description: Portfolio de Jimbow-cl. En construction
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://github.com/Jimbow-cl
+url: https://jimbow-cl.github.io/
 author: Jimmy Cart-Lamy
 street_address: 
 city: Nice
