--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jimbow-cl 
 subtitle: GitHub
 email: cart-lamy.jimmy@live.fr
-description: C'est ici que vous trouverez les explications de mes différents projets Git
+description: C'est ici que vous trouverez  mes différents projets Git
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://jimbow-cl.github.io
 author: Jimmy Cart-Lamy
